<?xml version="1.0"?>
<package format="3">
  <name>pcd2pgm</name>
  <version>0.0.1</version>
  <description>pcd2pgm ROS2 Package</description>
  <maintainer email="user@todo.todo">TODO: Maintainer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>PCL</depend>
  <depend>OpenCV</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
